--- a/source/projects/index.html
+++ b/source/projects/index.html
@@ -1,8 +1,58 @@
 ---
-layout: page
-title: "index"
-date: 2013-07-13 17:52
-comments: true
-sharing: true
+title: Projects
+layout: custom_page
+comments: false
+sharing: false
 footer: true
+sidebar: false
 ---
+<div class="page-header"></div>
+
+<div class="project wide-1 red">
+	<p class="project-text">TILE TITANS</p>
+	<small>Summer 2013</small>
+</div>
+
+<div class="project wide-1 purple">
+	<a href="{{ root_url }}/projects/concert-for-the-deaf.html">
+		<img src="/images/projects/concert_for_the_deaf.png" class="project-image"/>
+	</a>
+	<p class="project-text">CONCERT FOR THE DEAF</p>
+	<small>Winter 2013</small>
+</div>
+
+<div class="project wide-1 blue">
+	<a href="{{ root_url }}/projects/hi-lo-simulation.html">
+		<img src="/images/projects/hi_lo_simulation.png" class="project-image"/>
+	</a>
+	<p class="project-text">HI-LO SIMULATION</p>
+	<small>Summer 2012</small>
+</div>
+
+<div class="project wide-1 teal">
+	<a href="{{ root_url }}/projects/gtasks-extension.html">
+		<img src="/images/projects/gtasks.png" class="project-image"/>
+	</a>
+	<p class="project-text">GTASKS EXTENSION</p>
+	<small>Fall 2012</small>
+	
+</div>
+
+<div class="project wide-1 orange">
+	<a href="{{ root_url }}/projects/hybrid-locomotion-robot.html">
+		<img src="/images/projects/hybrid_locomotion_robot.png" class="project-image"/>
+	</a>
+	<p class="project-text">HYBRID LOCOMOTION ROBOT</p>
+	<small>Summer 2011</small>
+</div>
+
+<div class="project wide-1 beige">
+	<a href="{{ root_url }}/projects/tire-stacking-robot.html">
+		<img src="/images/projects/tire_stacking_robot.png" class="project-image"/>
+	</a>
+	<p class="project-text">TIRE STACKING ROBOT</p>
+	<small>Winter 2011</small>
+</div>
+
+{% include custom/mini-footer.html %}
+
