moved navbar to top

--- a/source/about.html
+++ b/source/about.html
@@ -5,3 +5,20 @@ comments: false
 sharing: false
 footer: false
 ---
+<div class="row">
+<div class="span10">
+	<div class="page-header"></div>
+	<h4>Academic</h4>
+	<p>
+	I am due to complete my Undergraduate Degree in Engineering Science - Aerospace Engineering at the University of Toronto in May 2014.
+	</p>
+	
+	<br />
+	<h4>Web Dev</h4>
+	<p>
+	During my undergraduate degree I pursued web development on the side through a series of hackathons and side projects. 
+	</p>
+
+	{% include custom/mini-footer.html %}
+</div>
+</div>
