--- a/source/projects/gtasks-extension.html
+++ b/source/projects/gtasks-extension.html
@@ -1,20 +1,17 @@
 ---
 layout: custom_page
 title: "Google Tasks Extension"
+subtitle: "Fall 2012"
 comments: false
 sharing: false
 footer: true
 ---
 
-Fall 2012
-
-<div class="row">
-<div class="span10">
-	<div class="page-header"></div>
+<div class="span1"></div>
+<div class="span9">	
 	<p>
 	Developed a mobile webapp that displays your google tasks in a priority matrix. The webapp was developed as part of a contract for the University of Toronto Institute for Aerospace Studies (UTIAS).
 	</p>
 	
 	{% include custom/mini-footer.html %}
-</div>
 </div>
