--- a/source/projects/hi-lo-simulation.html
+++ b/source/projects/hi-lo-simulation.html
@@ -1,15 +1,14 @@
 ---
 layout: custom_page
 title: "Hi-Lo Simulation"
+subtitle: "Summer 2012"
 comments: false
 sharing: false
 footer: true
 ---
-Summer 2012
 
-<div class="row">
-<div class="span10">
-	<div class="page-header"></div>
+<div class="span1"></div>
+<div class="span9">
 	<p>
 	During 2012's summer I read a book and learned a method of card counting called the KO method. The book claimed that the KO method was superior to other card counting methods (and had pretty graphs to back it up!). I wanted to see the real results...
 	</p>
@@ -23,5 +22,4 @@ Summer 2012
 	The end result, unfortunately, is that the KO method does not perform any better than other popular methods such as Hi-Lo and Red Sevens.
 	</p>
 	{% include custom/mini-footer.html %}
-</div>
 </div>
