--- a/source/projects/index.html
+++ b/source/projects/index.html
@@ -1,14 +1,17 @@
 ---
-title: Projects
 layout: custom_page
 comments: false
 sharing: false
 footer: true
 sidebar: false
 ---
-<div class="page-header"></div>
 
+<div class="span1"></div>
+<div class="span9">
 <div class="project wide-1 red">
+	<a href="{{ root_url }}/projects/tile-titans.html">
+		<img src="/images/projects/tiletitans.png" class="project-image"/>
+	</a>
 	<p class="project-text">TILE TITANS</p>
 	<small>Summer 2013</small>
 </div>
@@ -55,4 +58,5 @@ sidebar: false
 </div>
 
 {% include custom/mini-footer.html %}
+</div>
 
