--- a/source/projects/concert-for-the-deaf.html
+++ b/source/projects/concert-for-the-deaf.html
@@ -1,14 +1,14 @@
 ---
 layout: custom_page
 title: "Concert For The Deaf"
+subtitle: "Winter 2013"
 comments: false
 sharing: false
 footer: true
 ---
-Winter 2013
-<div class="row">
-<div class="span10">
-	<div class="page-header"></div>
+
+<div class="span1"></div>
+<div class="span9">
 	<p>Developed in association with the <a href="http://tetra.sa.utoronto.ca/">University of Toronto TETRA society</a> and several of its members.
 	The Concert For The Deaf is an initiative to enable the deaf and hard of hearing to experience music. 
 	</p>
@@ -17,14 +17,14 @@ Winter 2013
 	</p>
 
 
-	<ul class="row project-thumbnail-listing">
-	  <li class="span4 project-thumbnail">
+	<ul class="row">
+	  <li class="span3 project-thumbnail">
 	      <img src="/images/projects/concert-for-deaf-1.png" alt="">
 	  </li>
-	  <li class="span4 project-thumbnail">
+	  <li class="span3 project-thumbnail">
 	      <img src="/images/projects/concert-for-deaf-2.png" alt="">
 	  </li>
-	  <li class="span4 project-thumbnail">
+	  <li class="span3 project-thumbnail">
 	      <img src="/images/projects/concert-for-deaf-3.png" alt="">
 	  </li>
 	</ul>
@@ -35,17 +35,16 @@ Winter 2013
 	The version 2 was showcased at the Concert For The Deaf in April 2013.
 	</p>
 
-	<ul class="row project-thumbnail-listing">
-	  <li class="span4 project-thumbnail">
+	<ul class="row">
+	  <li class="span3 project-thumbnail">
 	      <img src="/images/projects/concert-for-deaf-v2-1.png" alt="">
 	  </li>
-	  <li class="span4 project-thumbnail">
+	  <li class="span3 project-thumbnail">
 	      <img src="/images/projects/concert-for-deaf-v2-2.png" alt="">
 	  </li>
-	  <li class="span4 project-thumbnail">
+	  <li class="span3 project-thumbnail">
 	      <img src="/images/projects/concert-for-deaf-v2-3.png" alt="">
 	  </li>
 	</ul>
 	{% include custom/mini-footer.html %}
-</div>
 </div>
