--- a/source/projects/hybrid-locomotion-robot.html
+++ b/source/projects/hybrid-locomotion-robot.html
@@ -1,14 +1,14 @@
 ---
 layout: custom_page
 title: "Hybrid Locomotion Robot"
+subtitle: "Summer 2011"
 comments: false
 sharing: false
 footer: true
 ---
-Summer 2011
-<div class="row">
-<div class="span10">
-	<div class="page-header"></div>
+
+<div class="span1"></div>
+<div class="span9">
 	<p>Designed and developed for the University of Toronto Institute for Aerospace Studies (UTIAS) to perform multi-vehicle simulations on various terrains.
 	</p>
 	
@@ -20,14 +20,14 @@ Summer 2011
 	The onboard circuits are proprietary PCBs, designed and developed in-house. The robot is controlled by a PIC32 microcontroller.
 	</p>
 
-	<ul class="row project-thumbnail-listing">
-	  <li class="span4 project-thumbnail">
+	<ul class="row">
+	  <li class="span3 project-thumbnail">
 	      <img src="/images/projects/rover-1.png" alt="">
 	  </li>
-	  <li class="span4 project-thumbnail">
+	  <li class="span3 project-thumbnail">
 	      <img src="/images/projects/rover-2.png" alt="">
 	  </li>
-	  <li class="span4 project-thumbnail">
+	  <li class="span3 project-thumbnail">
 	      <img src="/images/projects/rover-3.png" alt="">
 	  </li>
 	</ul>
