--- a/source/projects/tire-stacking-robot.html
+++ b/source/projects/tire-stacking-robot.html
@@ -1,14 +1,14 @@
 ---
 layout: custom_page
 title: "Tire Stacking Robot"
+subtitle: "Winter 2011"
 comments: false
 sharing: false
 footer: true
 ---
-Winter 2011
-<div class="row">
-<div class="span10">
-	<div class="page-header"></div>
+
+<div class="span1"></div>
+<div class="span9">
 	<p>Designed and developed as part of the Unviversity of Toronto Engineering Science Undergraduate AER201 Design course.
 	</p>
 	
@@ -28,17 +28,16 @@ Winter 2011
 	<div class="page-header"></div>
 
 	<ul class="row project-thumbnail-listing">
-	  <li class="span4 project-thumbnail">
+	  <li class="span3 project-thumbnail">
 	      <img src="/images/projects/aer201-1.png" alt="">
 	  </li>
-	  <li class="span4 project-thumbnail">
+	  <li class="span3 project-thumbnail">
 	      <img src="/images/projects/aer201-2.png" alt="">
 	  </li>
-	  <li class="span4 project-thumbnail">
+	  <li class="span3 project-thumbnail">
 	      <img src="/images/projects/aer201-3.png" alt="">
 	  </li>
 	</ul>
 	
 	{% include custom/mini-footer.html %}
-</div>
 </div>
