--- a/source/about.html
+++ b/source/about.html
@@ -1,13 +1,11 @@
 ---
 layout: custom_page
-title: "About"
 comments: false
 sharing: false
 footer: false
 ---
-<div class="row">
-<div class="span10">
-	<div class="page-header"></div>
+<div class="span1"></div>
+<div class="span9">
 	<h4>Academic</h4>
 	<p>
 	I am due to complete my Undergraduate Degree in Engineering Science - Aerospace Engineering at the University of Toronto in May 2014.
@@ -20,5 +18,4 @@ footer: false
 	</p>
 
 	{% include custom/mini-footer.html %}
-</div>
 </div>
