made the middle text body smaller, added coming soon for blog. changed the default page to the about page... its still a little sparse

--- a/source/projects/concert-for-the-deaf.html
+++ b/source/projects/concert-for-the-deaf.html
@@ -7,44 +7,55 @@ sharing: false
 footer: true
 ---
 
-<div class="span1"></div>
-<div class="span9">
+<div class="span3"></div>
+<div class="span6 text-body">
 	<p>Developed in association with the <a href="http://tetra.sa.utoronto.ca/">University of Toronto TETRA society</a> and several of its members.
 	The Concert For The Deaf is an initiative to enable the deaf and hard of hearing to experience music. 
 	</p>
 	<p>
 	We developed a small box that converts audio signals to tactile vibrations. The version 1 prototype was constructed during the <a href="http://hackday.linkedin.com/toronto/2013">LinkedIn Toronto Hackday 2013</a> and recieved 3rd place.
 	</p>
-
+	<div class="page-header"></div>
+</div>
 
 	<ul class="row">
-	  <li class="span3 project-thumbnail">
+	  <li class="span4 project-thumbnail">
 	      <img src="/images/projects/concert-for-deaf-1.png" alt="">
 	  </li>
-	  <li class="span3 project-thumbnail">
+	  <li class="span4 project-thumbnail">
 	      <img src="/images/projects/concert-for-deaf-2.png" alt="">
 	  </li>
-	  <li class="span3 project-thumbnail">
+	  <li class="span4 project-thumbnail">
 	      <img src="/images/projects/concert-for-deaf-3.png" alt="">
 	  </li>
 	</ul>
 
+<div class="span3"></div>
+<div class="span6 text-body">
 	<div class="page-header"></div>
 
 	<p>
 	The version 2 was showcased at the Concert For The Deaf in April 2013.
 	</p>
 
+<div class="page-header"></div>
+
+</div>
+
+
 	<ul class="row">
-	  <li class="span3 project-thumbnail">
+	  <li class="span4 project-thumbnail">
 	      <img src="/images/projects/concert-for-deaf-v2-1.png" alt="">
 	  </li>
-	  <li class="span3 project-thumbnail">
+	  <li class="span4 project-thumbnail">
 	      <img src="/images/projects/concert-for-deaf-v2-2.png" alt="">
 	  </li>
-	  <li class="span3 project-thumbnail">
+	  <li class="span4 project-thumbnail">
 	      <img src="/images/projects/concert-for-deaf-v2-3.png" alt="">
 	  </li>
 	</ul>
+
+<div class="span3"></div>
+<div class="span6 text-body">
 	{% include custom/mini-footer.html %}
 </div>
