--- a/source/projects/tile-titans.html
+++ b/source/projects/tile-titans.html
@@ -7,24 +7,28 @@ sharing: false
 footer: true
 ---
 
-<div class="span1"></div>
-<div class="span9">
+<div class="span3"></div>
+<div class="span6 text-body">
 	<p>
 	Players go head to head in this turn based board game that plays like a mix between chess and tic-tac-toe. The game is currently available to play on kongregate and will soon be accessible through the chrome store. There are plans in the near future to release the game on mobile phones.
 	</p>
+	<div class="page-header"></div>
+</div>
 
 	<ul class="row">
-	  <li class="span3 project-thumbnail">
+	  <li class="span4 project-thumbnail">
 	      <img src="/images/projects/tt-screenshot-1.png" alt="">
 	  </li>
-	  <li class="span3 project-thumbnail">
+	  <li class="span4 project-thumbnail">
 	      <img src="/images/projects/tt-screenshot-2.png" alt="">
 	  </li>
-	  <li class="span3 project-thumbnail">
+	  <li class="span4 project-thumbnail">
 	      <img src="/images/projects/tt-screenshot-3.png" alt="">
 	  </li>
 	</ul>
 
+<div class="span3"></div>
+<div class="span6 text-body">
 	<div class="page-header"></div>
 
 	<p>
