--- a/source/index.html
+++ b/source/index.html
@@ -1,23 +1,23 @@
 ---
-layout: custom_default
-sidebar: false
+layout: custom_page
+comments: false
+sharing: false
+footer: false
 ---
 
-<div class="blog-index">
-  {% assign index = true %}
-  {% for post in paginator.posts %}
-  {% assign content = post.content %}
-    <article>
-      {% include article.html %}
-    </article>
-  {% endfor %}
-  <div class="pagination">
-    {% if paginator.next_page %}
-      <a class="prev" href="{{paginator.next_page}}">&larr; Older</a>
-    {% endif %}
-    <a href="/blog/archives">Blog Archives</a>
-    {% if paginator.previous_page %}
-    <a class="next" href="{{paginator.previous_page}}">Newer &rarr;</a>
-    {% endif %}
-  </div>
+<img src="/images/me.png" class="self-pic"/>
+<div class="span3"></div>
+<div class="span6 text-body">
+	<h4>Academic</h4>
+	<p>
+	I am due to complete my Undergraduate Degree in Engineering Science - Aerospace Engineering at the University of Toronto in May 2014.
+	</p>
+	
+	<br />
+	<h4>Web Dev</h4>
+	<p>
+	During my undergraduate degree I pursued web development on the side through a series of hackathons and side projects. 
+	</p>
+
+	{% include custom/mini-footer.html %}
 </div>
