--- a/source/projects/gtasks-extension.html
+++ b/source/projects/gtasks-extension.html
@@ -7,8 +7,8 @@ sharing: false
 footer: true
 ---
 
-<div class="span1"></div>
-<div class="span9">	
+<div class="span3"></div>
+<div class="span6 text-body">
 	<p>
 	Developed a mobile webapp that displays your google tasks in a priority matrix. The webapp was developed as part of a contract for the University of Toronto Institute for Aerospace Studies (UTIAS).
 	</p>
