--- a/source/projects/hi-lo-simulation.html
+++ b/source/projects/hi-lo-simulation.html
@@ -7,8 +7,8 @@ sharing: false
 footer: true
 ---
 
-<div class="span1"></div>
-<div class="span9">
+<div class="span3"></div>
+<div class="span6 text-body">
 	<p>
 	During 2012's summer I read a book and learned a method of card counting called the KO method. The book claimed that the KO method was superior to other card counting methods (and had pretty graphs to back it up!). I wanted to see the real results...
 	</p>
