--- a/source/projects/tire-stacking-robot.html
+++ b/source/projects/tire-stacking-robot.html
@@ -7,8 +7,8 @@ sharing: false
 footer: true
 ---
 
-<div class="span1"></div>
-<div class="span9">
+<div class="span3"></div>
+<div class="span6 text-body">
 	<p>Designed and developed as part of the Unviversity of Toronto Engineering Science Undergraduate AER201 Design course.
 	</p>
 	
@@ -26,18 +26,20 @@ footer: true
 	</p>
 
 	<div class="page-header"></div>
+</div>
 
-	<ul class="row project-thumbnail-listing">
-	  <li class="span3 project-thumbnail">
+	<ul class="row">
+	  <li class="span4 project-thumbnail">
 	      <img src="/images/projects/aer201-1.png" alt="">
 	  </li>
-	  <li class="span3 project-thumbnail">
+	  <li class="span4 project-thumbnail">
 	      <img src="/images/projects/aer201-2.png" alt="">
 	  </li>
-	  <li class="span3 project-thumbnail">
+	  <li class="span4 project-thumbnail">
 	      <img src="/images/projects/aer201-3.png" alt="">
 	  </li>
 	</ul>
-	
+<div class="span3"></div>
+<div class="span6 text-body">
 	{% include custom/mini-footer.html %}
 </div>
