added github g+ and linkedn links, shoud add facebook? I dunno

--- a/source/index.html
+++ b/source/index.html
@@ -6,18 +6,56 @@ footer: false
 ---
 
 <img src="/images/me.png" class="self-pic"/>
+<div class="link-container">
+	<a href="https://github.com/TimothyAhong"><img class="link-logo" src="/images/GitHub-Mark-64px.png"></a>
+	<a href="http://ca.linkedin.com/pub/timothy-ahong/28/997/117/"><img class="link-logo" src="/images/LinkedIn-64px.png"></a>
+	<a href="https://plus.google.com/u/1/109848505438287578112/"><img class="link-logo" src="/images/googleplus-64px.png"></a>
+</div>
+
 <div class="span3"></div>
 <div class="span6 text-body">
-	<h4>Academic</h4>
 	<p>
-	I am due to complete my Undergraduate Degree in Engineering Science - Aerospace Engineering at the University of Toronto in May 2014.
+	Welcome to my portfolio website! 
+	My name is Timothy Ahong.
+	I'm currently studying Aerospace Engineering at the University of Toronto and due to complete my degree by May 2014.
+	I also pursue web development via side projects and contracts.
 	</p>
-	
-	<br />
-	<h4>Web Dev</h4>
+	<div class="page-header"></div>
 	<p>
-	During my undergraduate degree I pursued web development on the side through a series of hackathons and side projects. 
+	Aerospace Engineering has been a challenging and enlightening area of study. The program includes a breadth of fields from fluid dynamics to robotics to space systems design. 
 	</p>
 
+	<p>
+	Within Aerospace my interests are primarily robotics and control systems. Here are a few <i>robots</i> I have worked on during my Undergraduate degree. Check out the project pages for more details!
+	</p>
+	<div class="page-header"></div>
+</div>
+<ul class="row">
+	<li class="span4 project-thumbnail">
+		<img src="/images/projects/rover-3.png" alt="">
+	</li>
+	<li class="span4 project-thumbnail">
+		<img src="/images/projects/rover-1.png" alt="">
+	</li>
+	<li class="span4 project-thumbnail">
+	      <img src="/images/projects/aer201-3.png" alt="">
+	 </li>
+</ul>
+
+<div class="span3"></div>
+<div class="span6 text-body">
+	<div class="page-header"></div>
+	<p>
+	Outside of Aerospace I have been pursuing web development. During 3rd year I learned just enough Ruby on Rails and Javascript to land a 16 month work term at EventMobi as a full-stack developer. 
+	</p>
+
+	<p>
+	My day-to-day included front-end development with Backbone.js, or more recently Angular.js, back-end development with CodeIgniter/MySQL/NodeJS/MongoDB and server management using chef.
+	</p>
+
+	<p>
+	Aside from EventMobi I have worked on several contracts, hackathons and side-projects to hone my web-fu. Check out the project pages for details!
+	</p>
+	
 	{% include custom/mini-footer.html %}
 </div>
