--- a/source/projects/concert-for-the-deaf.html
+++ b/source/projects/concert-for-the-deaf.html
@@ -13,7 +13,7 @@ footer: true
 	The Concert For The Deaf is an initiative to enable the deaf and hard of hearing to experience music. 
 	</p>
 	<p>
-	We developed a small box that converts audio signals to tactile vibrations. The version 1 prototype was constructed during the <a href="http://hackday.linkedin.com/toronto/2013">LinkedIn Toronto Hackday 2013</a> and recieved 3rd place.
+	We developed a small box that converts audio signals to tactile vibrations. The version 1 prototype was constructed during the <a href="http://hackday.linkedin.com/toronto/2013">LinkedIn Toronto Hackday 2013</a> and received 3rd place.
 	</p>
 	<div class="page-header"></div>
 </div>
@@ -35,7 +35,7 @@ footer: true
 	<div class="page-header"></div>
 
 	<p>
-	The version 2 was showcased at the Concert For The Deaf in April 2013.
+	We developed a V2 with improved actuators and a more accurate response. The V2 was showcased at the Concert For The Deaf in March 2013.
 	</p>
 
 <div class="page-header"></div>
