--- a/source/projects/hi-lo-simulation.html
+++ b/source/projects/hi-lo-simulation.html
@@ -16,7 +16,7 @@ footer: true
 	I forked a python application that simulates games of blackjack played using various card counting strategies and implemented the KO method. Then the computation was distributed to the University of Toronto's Engineering Computation Facility which comprises of ~170 computers.
 	</p>
 	<p>
-	Millions of games were simulated, the results were analysed in R to determine various statistics on several card counting strategies. Some of these statistics are avg # of hands to double initial capital, % chance to ruin before doubling, avg expectation of hand.
+	Millions of games were simulated, the results were analyzed in R to determine various statistics on several card counting strategies. Some of these statistics are avg # of hands to double initial capital, % chance to ruin before doubling, avg expectation of hand.
 	</p>
 	<p>
 	The end result, unfortunately, is that the KO method does not perform any better than other popular methods such as Hi-Lo and Red Sevens.
