--- a/source/projects/hybrid-locomotion-robot.html
+++ b/source/projects/hybrid-locomotion-robot.html
@@ -13,7 +13,7 @@ footer: true
 	</p>
 	
 	<p>
-	Capable of legged manoeuvres as well as wheeled locomotion. Each robot comes equipped with a series of sensors including a 320p camera, 4 IR rangers, 1 Sonar, 4 microswitches, shaft encoders and servo readouts.
+	Capable of legged maneuvers as well as wheeled locomotion. Each robot comes equipped with a series of sensors including a 320p camera, 4 IR rangers, 1 Sonar, 4 microswitches, shaft encoders and servo readouts.
 	</p>
 	
 	<p>
