--- a/source/projects/tile-titans.html
+++ b/source/projects/tile-titans.html
@@ -36,7 +36,7 @@ footer: true
 	</p>
 
 	<p>
-	The servers run NodeJS with Socket.io as the communication layer and are hosted on Amazon EC2. The nodes hit a MongoDB hosted by MongoHQ for persistant storage and a Redis server (also EC2) for everything else.
+	The servers run NodeJS with Socket.io as the communication layer and are hosted on Amazon EC2. The nodes hit a MongoDB hosted by MongoHQ for persistent storage and a Redis server (also EC2) for everything else.
 	</p>
 
 	{% include custom/mini-footer.html %}
