--- a/source/projects/tire-stacking-robot.html
+++ b/source/projects/tire-stacking-robot.html
@@ -9,11 +9,11 @@ footer: true
 
 <div class="span3"></div>
 <div class="span6 text-body">
-	<p>Designed and developed as part of the Unviversity of Toronto Engineering Science Undergraduate AER201 Design course.
+	<p>Designed and developed as part of the University of Toronto Engineering Science Undergraduate AER201 Design course.
 	</p>
 	
 	<p>
-	Students were placed in groups of 3 and given a design problem for which they must construct an automous robot. My role on the team was electro-mechanical design and construction. Here is a video of an early version test run:
+	Students were placed in groups of 3 and given a design problem for which they must construct an autonomous robot. My role on the team was electro-mechanical design and construction. Here is a video of an early version test run:
 	</p>
 	<iframe style="padding-top:10px;padding-bottom:10px;" src="http://player.vimeo.com/video/70286693" width="100%" height="500px" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 	
