--- a/source/projects/gtasks-extension.html
+++ b/source/projects/gtasks-extension.html
@@ -10,7 +10,7 @@ footer: true
 <div class="span3"></div>
 <div class="span6 text-body">
 	<p>
-	Developed a mobile webapp that displays your google tasks in a priority matrix. The webapp was developed as part of a contract for the University of Toronto Institute for Aerospace Studies (UTIAS).
+	Developed a mobile webapp that displays your google tasks in a priority matrix. The webapp was developed as part of a contract for Airpoint Solutions.
 	</p>
 	
 	{% include custom/mini-footer.html %}
