added github links and centered pages

--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@ footer: false
 <img src="/images/me.png" class="self-pic"/>
 <div class="link-container">
 	<a href="https://github.com/TimothyAhong"><img class="link-logo" src="/images/GitHub-Mark-64px.png"></a>
-	<a href="http://ca.linkedin.com/pub/timothy-ahong/28/997/117/"><img class="link-logo" src="/images/LinkedIn-64px.png"></a>
+	<a href="http://www.linkedin.com/in/timothyahong"><img class="link-logo" src="/images/LinkedIn-64px.png"></a>
 	<a href="https://plus.google.com/u/1/109848505438287578112/"><img class="link-logo" src="/images/googleplus-64px.png"></a>
 </div>
 
@@ -17,8 +17,8 @@ footer: false
 	<p>
 	Welcome to my portfolio website! 
 	My name is Timothy Ahong.
-	I'm currently studying Aerospace Engineering at the University of Toronto and due to complete my degree by May 2014.
-	I also pursue web development via side projects and contracts.
+	I'm currently studying Aerospace Engineering at the University of Toronto and will complete my degree by May 2015.
+	I am also interested in web development.
 	</p>
 	<div class="page-header"></div>
 	<p>
@@ -50,7 +50,7 @@ footer: false
 	</p>
 
 	<p>
-	My day-to-day included front-end development with Backbone.js, or more recently Angular.js, back-end development with CodeIgniter/MySQL/NodeJS/MongoDB and server management using chef.
+	My day-to-day work included front-end development with Backbone.js, or more recently Angular.js, back-end development with CodeIgniter, MySQL, NodeJS, MongoDB and server management using chef.
 	</p>
 
 	<p>
