--- a/source/projects/hi-lo-simulation.html
+++ b/source/projects/hi-lo-simulation.html
@@ -6,7 +6,9 @@ comments: false
 sharing: false
 footer: true
 ---
-
+<div class="link-container no-top-margin">
+	<a href="https://github.com/TimothyAhong/BJSim"><img class="link-logo" src="/images/GitHub-Mark-64px.png"></a>
+</div>
 <div class="span3"></div>
 <div class="span6 text-body">
 	<p>
