--- a/source/index.html
+++ b/source/index.html
@@ -15,10 +15,7 @@ footer: false
 <div class="span3"></div>
 <div class="span6 text-body">
 	<p>
-	Welcome to my portfolio website! 
-	My name is Timothy Ahong.
-	I'm currently studying Aerospace Engineering at the University of Toronto and will complete my degree by May 2015.
-	I am also interested in web development.
+	Welcome to my portfolio website! My name is Timothy Ahong. I studied Aerospace Engineering at the University of Toronto.
 	</p>
 	<div class="page-header"></div>
 	<p>
@@ -46,11 +43,11 @@ footer: false
 <div class="span6 text-body">
 	<div class="page-header"></div>
 	<p>
-	Outside of Aerospace I have been pursuing web development. During 3rd year I learned just enough Ruby on Rails and Javascript to land a 16 month work term at EventMobi as a full-stack developer. 
+	During 3rd year I had my first exposure to web development by playing around with Ruby on Rails. After 3rd year I started my PEY (Professional Experience Year) at EventMobi, a Toronto based startup, as a full-stack web developer.
 	</p>
 
 	<p>
-	My day-to-day work included front-end development with Backbone.js, or more recently Angular.js, back-end development with CodeIgniter, MySQL, NodeJS, MongoDB and server management using chef.
+	My day-to-day work included front-end development with Backbone.js, or more recently Angular.js, back-end development with CodeIgniter, Flask, NodeJS, MongoDB, MySQL and server management using Chef and later Ansible. Towards the end of my PEY I was given an offer to continue working at EventMobi to develop and launch their new registration platform.
 	</p>
 
 	<p>
