--- a/source/projects/concert-for-the-deaf.html
+++ b/source/projects/concert-for-the-deaf.html
@@ -1,61 +1,89 @@
 ---
-layout: custom_page
+layout: custom_detail_page
 title: "Concert For The Deaf"
 subtitle: "Winter 2013"
 comments: false
 sharing: false
 footer: true
+sub_header_title: "Concert for the Deaf"
+sub_header_date: "Winter 2013"
+sub_header_image: "/images/projects/concert_for_the_deaf.png"
 ---
 
-<div class="span3"></div>
-<div class="span6 text-body">
-	<p>Developed in association with the <a href="http://tetra.sa.utoronto.ca/">University of Toronto TETRA society</a> and several of its members.
-	The Concert For The Deaf is an initiative to enable the deaf and hard of hearing to experience music. 
-	</p>
-	<p>
-	We developed a small box that converts audio signals to tactile vibrations. The version 1 prototype was constructed during the <a href="http://hackday.linkedin.com/toronto/2013">LinkedIn Toronto Hackday 2013</a> and received 3rd place.
-	</p>
-	<div class="page-header"></div>
+<div class="container">
+  	<div class="row span12 page-body">
+	    <article role="article">
+			<div class="span3"></div>
+			<div class="span6 text-body">
+				<h3 class="section-header">Overview</h3>
+				<p>
+				Tile Titans is an HTML5 game that I developed as a side project over the summer of 2013. It is a turn based board game that plays like a mix between chess and tic-tac-toe.
+				</p>
+				<h3 class="section-header">Skills</h3>
+				<ul>
+					<li>Python</li>
+					<li>Fast Fourier Transform</li>
+					<li>Hi/Lo Pass Filters</li>
+				</ul>
+				<h3 class="section-header">Key Learnings</h3>
+				<p>
+				When developing Tile Titans I spent too much time developing non-gameplay features such as a store for purchasing additional tiles and a way to add and challenge friends. I should have only focussed on developing the the core game and a simple matchmaking system and then developed the other features after launching it on Kongregate.
+				</p>
+			</div>
+		</article>
+	</div>
 </div>
 
-	<ul class="row">
-	  <li class="span4 project-thumbnail">
-	      <img src="/images/projects/concert-for-deaf-1.png" alt="">
-	  </li>
-	  <li class="span4 project-thumbnail">
-	      <img src="/images/projects/concert-for-deaf-2.png" alt="">
-	  </li>
-	  <li class="span4 project-thumbnail">
-	      <img src="/images/projects/concert-for-deaf-3.png" alt="">
-	  </li>
-	</ul>
+<ul class="article-break">
+  <li class="third project-thumbnail">
+      <img src="/images/projects/concert-for-deaf-1.png" alt="">
+  </li>
+  <li class="third project-thumbnail">
+      <img src="/images/projects/concert-for-deaf-2.png" alt="">
+  </li>
+  <li class="third project-thumbnail">
+      <img src="/images/projects/concert-for-deaf-3.png" alt="">
+  </li>
+</ul>
 
-<div class="span3"></div>
-<div class="span6 text-body">
-	<div class="page-header"></div>
-
-	<p>
-	We developed a V2 with improved actuators and a more accurate response. The V2 was showcased at the Concert For The Deaf in March 2013.
-	</p>
-
-<div class="page-header"></div>
-
+<div class="container">
+  	<div class="row span12 page-body">
+	    <article role="article">
+			<div class="span3"></div>
+			<div class="span6 text-body">
+				<h3 class="section-header">Version 1</h3>
+				<p>Developed in association with the <a href="http://tetra.sa.utoronto.ca/">University of Toronto TETRA society</a> and several of its members.
+				The Concert For The Deaf is an initiative to enable the deaf and hard of hearing to experience music. 
+				</p>
+				<p>
+				We developed a small box that converts audio signals to tactile vibrations. The version 1 prototype was constructed during the <a href="http://hackday.linkedin.com/toronto/2013">LinkedIn Toronto Hackday 2013</a> and received 3rd place.
+				</p>
+			</div>
+		</article>
+	</div>
 </div>
 
+<ul class="article-break">
+  <li class="third project-thumbnail">
+      <img src="/images/projects/concert-for-deaf-v2-1.png" alt="">
+  </li>
+  <li class="third project-thumbnail">
+      <img src="/images/projects/concert-for-deaf-v2-2.png" alt="">
+  </li>
+  <li class="third project-thumbnail">
+      <img src="/images/projects/concert-for-deaf-v2-3.png" alt="">
+  </li>
+</ul>
 
-	<ul class="row">
-	  <li class="span4 project-thumbnail">
-	      <img src="/images/projects/concert-for-deaf-v2-1.png" alt="">
-	  </li>
-	  <li class="span4 project-thumbnail">
-	      <img src="/images/projects/concert-for-deaf-v2-2.png" alt="">
-	  </li>
-	  <li class="span4 project-thumbnail">
-	      <img src="/images/projects/concert-for-deaf-v2-3.png" alt="">
-	  </li>
-	</ul>
-
-<div class="span3"></div>
-<div class="span6 text-body">
-	{% include custom/mini-footer.html %}
+<div class="container">
+  	<div class="row span12 page-body">
+	    <article role="article">
+			<div class="span3"></div>
+			<div class="span6 text-body">
+				<h3 class="section-header">Version 2</h3>
+				<p>We developed a V2 with improved actuators and a more accurate response. The V2 was showcased at the Concert For The Deaf in March 2013.</p>
+				{% include custom/mini-footer.html %}
+			</div>
+		</article>
+	</div>
 </div>
