--- a/source/projects/tile-titans.html
+++ b/source/projects/tile-titans.html
@@ -1,43 +1,66 @@
 ---
-layout: custom_page
-title: "Tile Titans"
-subtitle: "Summer 2013"
+layout: custom_detail_page
 comments: false
 sharing: false
 footer: true
+sub_header_title: "Tile Titans"
+sub_header_date: "Summer 2013"
+sub_header_image: "/images/projects/tiletitans.png"
 ---
 
-<div class="span3"></div>
-<div class="span6 text-body">
-	<p>
-	Players go head to head in this turn based board game that plays like a mix between chess and tic-tac-toe. The game is currently available to play on kongregate and will soon be accessible through the chrome store. There are plans in the near future to release the game on mobile phones.
-	</p>
-	<div class="page-header"></div>
+<div class="container">
+  	<div class="row page-body">
+		<div class="span6 offset3 text-body">
+			<h3 class="section-header">Overview</h3>
+			<p>
+			Tile Titans is an HTML5 game that I developed as a side project over the summer of 2013. It is a turn based board game that plays like a mix between chess and tic-tac-toe.
+			</p>
+			<h3 class="section-header">Skills</h3>
+			<ul>
+				<li>AngularJS</li>
+				<li>CoffeeScript</li>
+				<li>LESS</li>
+				<li>NodeJS</li>
+				<li>Socket.io</li>
+				<li>MongoDB</li>
+				<li>Redis</li>
+				<li>Amazon EC2</li>
+			</ul>
+			<h3 class="section-header">Key Learnings</h3>
+			<p>
+			When developing Tile Titans I spent too much time developing non-gameplay features such as a store for purchasing additional tiles and a way to add and challenge friends. I should have only focussed on developing the the core game and a simple matchmaking system and then developed the other features after launching it on Kongregate.
+			</p>
+		</div>
+	</div>
 </div>
 
-	<ul class="row">
-	  <li class="span4 project-thumbnail">
-	      <img src="/images/projects/tt-screenshot-2.png" alt="">
-	  </li>
-	  <li class="span4 project-thumbnail">
-	      <img src="/images/projects/tt-screenshot-1.png" alt="">
-	  </li>
-	  <li class="span4 project-thumbnail">
-	      <img src="/images/projects/tt-screenshot-3.png" alt="">
-	  </li>
-	</ul>
 
-<div class="span3"></div>
-<div class="span6 text-body">
-	<div class="page-header"></div>
+<div class="article-break">
+		<div class="third project-thumbnail">
+		<img src="/images/projects/tt-screenshot-2.png" alt="">
+		</div>
+		<div class="third project-thumbnail">
+		<img src="/images/projects/tt-screenshot-1.png" alt="">
+		</div>
+		<div class="third project-thumbnail">
+		<img src="/images/projects/tt-screenshot-3.png" alt="">
+		</div>
+</div>
 
-	<p>
-	The game runs on HTML5 inside the browser. Client side code leverages AngularJS, CoffeeScript and Less and is delivered to the client via Amazon's CloudFront CDN. 
-	</p>
-
-	<p>
-	The servers run NodeJS with Socket.io as the communication layer and are hosted on Amazon EC2. The nodes hit a MongoDB hosted by MongoHQ for persistent storage and a Redis server (also EC2) for everything else.
-	</p>
-
-	{% include custom/mini-footer.html %}
+<div class="container">
+  	<div class="row page-body">
+		<div class="span6 offset3 text-body">
+			<h3 class="section-header">Project Motivation</h3>
+			<p>
+			I developed a V1 of the game as part of the UKEN games hackathon
+			</p>
+			<h3 class="section-header">Tech Stack</h3>
+			<p>
+			The game runs on HTML5 inside the browser. Client side code leverages AngularJS, CoffeeScript and Less and is delivered to the client via Amazon's CloudFront CDN. 
+			<br />
+			The servers run NodeJS with Socket.io as the communication layer and are hosted on Amazon EC2. The nodes hit a MongoDB hosted by MongoHQ for persistent storage and a Redis server (also EC2) for everything else.
+			</p>
+			{% include custom/mini-footer.html %}
+		</div>
+	</div>
 </div>
