--- a/source/projects/index.html
+++ b/source/projects/index.html
@@ -9,73 +9,74 @@ sidebar: false
 
 <div class="span10 offset1">
 	<br />
-	<div class="sub-header project-listing">
-		<a href="{{ root_url }}/projects/tile-titans.html">
-			<img src="/images/projects/tiletitans.png" class="sub-header-image"/>
+	<div class="row project-listing">
+		<a class="span2 project-listing-image-container" href="{{ root_url }}/projects/tile-titans.html">
+			<img src="/images/projects/tiletitans.png" class="project-listing-image"/>
 		</a>
-		<span class="sub-header-text">
+		<span class="span8 project-listing-text">
 			<h4 class="title-text">Tile Titans</h4>
 			<h4 class="date-text">&nbsp;( Summer 2013 )</h4>
 			<p>An HTML5 board game that I developed as a side-project</p>
 		</span>
 	</div>
 
-	<div class="sub-header project-listing">
-		<a href="{{ root_url }}/projects/concert-for-the-deaf.html">
-			<img src="/images/projects/concert_for_the_deaf.png" class="sub-header-image"/>
+	<div class="row project-listing">
+		<a class="span2 project-listing-image-container" href="{{ root_url }}/projects/concert-for-the-deaf.html">
+			<img src="/images/projects/concert_for_the_deaf.png" class="project-listing-image"/>
 		</a>
-		<span class="sub-header-text">
+		<span class="span8 project-listing-text">
 			<h4 class="title-text">Concert for the Deaf</h4>
 			<h4 class="date-text">&nbsp;( Winter 2013 )</h4>
 		</span>
 	</div>
 
-	<div class="sub-header project-listing">
-		<a href="{{ root_url }}/projects/hi-lo-simulation.html">
-			<img src="/images/projects/hi_lo_simulation.png" class="sub-header-image"/>
+	<div class="row project-listing">
+		<a class="span2 project-listing-image-container" href="{{ root_url }}/projects/hi-lo-simulation.html">
+			<img src="/images/projects/hi_lo_simulation.png" class="project-listing-image"/>
 		</a>
-		<span class="sub-header-text">
+		<span class="span8 project-listing-text">
 			<h4 class="title-text">Hi-Lo Simulation</h4>
 			<h4 class="date-text">&nbsp;( Summer 2012 )</h4>
 		</span>
 	</div>
 
-	<div class="sub-header project-listing">
-		<a href="{{ root_url }}/projects/gtasks.html">
-			<img src="/images/projects/gtasks.png" class="sub-header-image"/>
+	<div class="row project-listing">
+		<a class="span2 project-listing-image-container" href="{{ root_url }}/projects/gtasks.html">
+			<img src="/images/projects/gtasks.png" class="project-listing-image"/>
 		</a>
-		<span class="sub-header-text">
+		<span class="span8 project-listing-text">
 			<h4 class="title-text">Google Tasks App</h4>
 			<h4 class="date-text">&nbsp;( Fall 2012 )</h4>
 		</span>
 	</div>
 
 
-	<div class="sub-header project-listing">
-		<a href="{{ root_url }}/projects/hybrid-locomotion-robot.html">
-			<img src="/images/projects/hybrid_locomotion_robot.png" class="sub-header-image"/>
+	<div class="row project-listing">
+		<a class="span2 project-listing-image-container" href="{{ root_url }}/projects/hybrid-locomotion-robot.html">
+			<img src="/images/projects/hybrid_locomotion_robot.png" class="project-listing-image"/>
 		</a>
-		<span class="sub-header-text">
+		<span class="span8 project-listing-text">
 			<h4 class="title-text">Hybrid Locomotion Rover</h4>
 			<h4 class="date-text">&nbsp;( Summer 2011 )</h4>
 		</span>
 	</div>
 
-	<div class="sub-header project-listing">
-		<a href="{{ root_url }}/projects/tire-stacking-robot.html">
-			<img src="/images/projects/tire_stacking_robot.png" class="sub-header-image"/>
+	<div class="row project-listing">
+		<a class="span2 project-listing-image-container" href="{{ root_url }}/projects/tire-stacking-robot.html">
+			<img src="/images/projects/tire_stacking_robot.png" class="project-listing-image"/>
 		</a>
-		<span class="sub-header-text">
+		<span class="span8 project-listing-text">
 			<h4 class="title-text">Tire Stacking Robot</h4>
 			<h4 class="date-text">&nbsp;( Winter 2011 )</h4>
 		</span>
 	</div>
 	<br/>
-	{% include custom/mini-footer.html %}
+	
 
 	<!--
+	{% include custom/mini-footer.html %}
 	<div class="project wide-1 red">
-		<a href="{{ root_url }}/projects/tile-titans.html">
+		<a class="span2 project-listing-image-container" href="{{ root_url }}/projects/tile-titans.html">
 			<img src="/images/projects/tiletitans.png" class="project-image"/>
 		</a>
 		<p class="project-text">TILE TITANS</p>
